--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     "homepage": "https://github.com/ashleydavis/cloud-fs#readme",
     "dependencies": {
         "minimist": "^1.2.5",
-        "moment": "^2.29.1"
+        "moment": "^2.29.1",
+        "shelljs": "^0.8.4",
+        "vorpal": "^1.12.0"
     },
     "devDependencies": {
         "@types/jest": "^26.0.20",
         "@types/minimist": "^1.2.1",
         "@types/node": "^14.14.25",
+        "@types/shelljs": "^0.8.8",
+        "@types/vorpal": "^1.12.0",
         "jest": "^26.6.3",
         "nodemon": "^2.0.7",
         "source-map-support": "0.5.19",
