--- a/package.json
+++ b/package.json
@@ -35,14 +35,13 @@
     },
     "homepage": "https://github.com/ashleydavis/cloud-fs#readme",
     "dependencies": {
-        "minimist": "^1.2.5",
+        "@azure/storage-blob": "^12.4.1",
         "moment": "^2.29.1",
         "shelljs": "^0.8.4",
         "vorpal": "^1.12.0"
     },
     "devDependencies": {
         "@types/jest": "^26.0.20",
-        "@types/minimist": "^1.2.1",
         "@types/node": "^14.14.25",
         "@types/shelljs": "^0.8.8",
         "@types/vorpal": "^1.12.0",
