--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "homepage": "https://github.com/ashleydavis/cloud-fs#readme",
     "dependencies": {
         "@azure/storage-blob": "^12.4.1",
+        "fs-extra": "^9.1.0",
         "moment": "^2.29.1",
         "shelljs": "^0.8.4",
         "vorpal": "^1.12.0"
     },
     "devDependencies": {
+        "@types/fs-extra": "^9.0.6",
         "@types/jest": "^26.0.20",
         "@types/node": "^14.14.25",
         "@types/shelljs": "^0.8.8",
