Expanded the prototype to be able to copy files from Azure to AWS.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "homepage": "https://github.com/ashleydavis/cloud-fs#readme",
     "dependencies": {
         "@azure/storage-blob": "^12.4.1",
+        "aws-sdk": "^2.839.0",
         "fs-extra": "^9.1.0",
         "moment": "^2.29.1",
         "shelljs": "^0.8.4",
