--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "aws-sdk": "^2.839.0",
         "fs-extra": "^9.1.0",
         "moment": "^2.29.1",
+        "progress": "^2.0.3",
         "shelljs": "^0.8.4",
         "vorpal": "^1.12.0"
     },
@@ -44,6 +45,7 @@
         "@types/fs-extra": "^9.0.6",
         "@types/jest": "^26.0.20",
         "@types/node": "^14.14.25",
+        "@types/progress": "^2.0.3",
         "@types/shelljs": "^0.8.8",
         "@types/vorpal": "^1.12.0",
         "jest": "^26.6.3",
